2009-01-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Reworked shapegame code to:
	- load the vertical selector from the skin
	- allow a color_background_skin in the Title xml board files.
	  It display a background around the title text. It avoid text
	  being bigger than the fixed background.

	* boards/skins/gartoon/hand.svg:
	* boards/skins/gartoon/skin.xml:
	* configure.in:
	* src/babymatch-activity/resources/Makefile.am:
	* src/babymatch-activity/resources/babymatch/board1_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board2_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board3_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board4_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board5_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board6_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board7_0.xml.in:
	* src/babymatch-activity/resources/shapegame/Makefile.am:
	* src/babymatch-activity/shapegame.c: (start_board), (end_board),
	(add_shape_to_list_of_shapes), (create_title),
	(add_xml_shape_to_data):
	* src/babyshapes-activity/resources/babyshapes/board5_0.xml.in:
	* src/babyshapes-activity/resources/babyshapes/board6_0.xml.in:
	* src/babyshapes-activity/resources/babyshapes/board7_0.xml.in:
	* src/chronos-activity/resources/chronos/board1_0.xml.in:
	* src/chronos-activity/resources/chronos/board4_3.xml.in:
	* src/doubleentry-activity/resources/doubleentry/board3_0.xml.in:
	* src/imagename-activity/resources/imagename/board1_0.xml.in:
	* src/imagename-activity/resources/imagename/board2_0.xml.in:
	* src/imagename-activity/resources/imagename/board3_0.xml.in:
	* src/imagename-activity/resources/imagename/board4_0.xml.in:
	* src/imagename-activity/resources/imagename/board5_0.xml.in:
	* src/imagename-activity/resources/imagename/board6_0.xml.in:
	* src/imagename-activity/resources/imagename/board7_0.xml.in:
	* src/paintings-activity/resources/paintings/board1_0.xml.in: